# Clinical-Data-Explorer

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  clinical.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  init_db.py  main.py  models.py  schemas.py
dashboard/: README.md  app.py  healthcheck.py
docs/: index.md
pipeline/: fetch_csv.py  ingest.py  schemas.py  settings.py  source.md  transform.py
scripts/: ingest.py
tests/: test_api_analytics.py  test_api_trials.py
